--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -28,59 +28,84 @@
 
   </div>
 
-  <!-- Problem -->
-  <div class="title-wrapper">
-    <h1 class="section-title">Problem</h1>
-    <img class="section-number" src="../img/1.png" alt="1">
-  </div>
+  <div class="page-body">
+    <!-- Problem -->
+    <div class="title-wrapper">
+      <h1 class="section-title">Problem</h1>
+      <img class="section-number" src="../img/1.png" alt="1">
+    </div>
 
-  <p class="page-normal-text"> In the spring of 2018, Dartmouth students from the Student Wellness Center partnered with the DALI
-    LAB and asked us to design and create a mobile application. The idea behind the app was to create
-    a discussion platform in which Dartmouth students would be able to discuss mental health and personal
-    issues without fear of judgement.
-  </p>
-
-  <h3 class="page-small-title"> Anonymity and Discussion </h3>
-  <p class="page-normal-text"> Through the initial meetings with our partners, they stressed two ideas: <b> anonymity and discussion. </b>    They wanted users to remain anonymous, and they also wanted the app to focus around and foster healthy
-    discussions. These principles would shape our decisions for the entire project.</p>
-
-  <h3 class="page-small-title"> Initial design challenges </h3>
-  <ul class="page-list">
-    <li class="page-list-item">How might we create a safe and comfortable environment?</li>
-    <li class="page-list-item">How might we allow anonymous users to develop personal relationships with each other?</li>
-    <li class="page-list-item">How might we encourage discussion through the app design?</li>
-  </ul>
-
-
-  <!-- User Research -->
-  <div class="title-wrapper">
-    <h1 class="section-title">User Research</h1>
-    <img class="section-number" src="../img/2.png" alt="2">
-  </div>
-
-  <h2 class="page-small-title"> Competitor Analysis </h2>
-
-  <p class="page-normal-text">
-    <p class="page-normal-text"> Through our user interviews, we were met with mixed opinions about a text message analyzing service.
-      Some were concerned about overanalyzing their relationships. Others believed that a service like
-      Left On Read would be a shallow representation of a relationship. But one user quote defined a
-      new focus for our team...
+    <p class="page-normal-text"> In the spring of 2018, Dartmouth students from the Student Wellness Center partnered with the DALI
+      LAB and asked us to design and create a mobile application. The idea behind the app was to create
+      a discussion platform in which Dartmouth students would be able to discuss mental health and personal
+      issues without fear of judgement.
     </p>
 
+    <h3 class="page-small-title"> Anonymity and Discussion </h3>
+    <p class="page-normal-text"> Through the initial meetings with our partners, they stressed two ideas:
+      <b> anonymity and discussion. </b> They wanted users to remain anonymous, and they also wanted
+      the app to focus around and foster healthy discussions. These principles would shape our decisions
+      for the entire project.</p>
+
+    <h3 class="page-small-title"> Initial design challenges </h3>
+    <ul class="page-list">
+      <li class="page-list-item">How might we create a safe and comfortable environment?</li>
+      <li class="page-list-item">How might we allow anonymous users to develop personal relationships with each other?</li>
+      <li class="page-list-item">How might we encourage discussion through the app design?</li>
+    </ul>
+
+
+    <!-- User Research -->
+    <div class="title-wrapper">
+      <h1 class="section-title">User Research</h1>
+      <img class="section-number" src="../img/2.png" alt="2">
+    </div>
+
+    <h2 class="page-small-title"> Social Media Platforms </h2>
+
+    <p class="page-normal-text"> We looked at various social media platforms to see how their user flow encouraged discussion and
+      interaction. For example, platforms like Instagram and Facebook encourage reviews through quantitative
+      measurements (i.e. number of likes), and this measurement also puts pressure on the user to post
+      popular posts that appealed to the mass audience. On Reddit, discussion is organized in a hierarchy
+      so that the most liked comments are displayed first. For forums, discussion in posts and comments
+      is usually chronoloigally ordered, creating an equal but often unorganized discussion that can
+      branch into several sub-discussions.
+    </p>
+
+    <h2 class="page-small-title"> User Interviews</h2>
+
+    <p class="page-normal-text"> We interviewed 15 students from various majors, backgrounds, and social economic statuses in order
+      to find what emotions and concerns people had for a discussion platform. Since most of the students
+      were familiar with social media platforms, we asked them questions about their social media use.
+    </p>
+
+    <h2 class="page-small-title">Things that we found important</h2>
+
+    <ul class="page-list">
+      <li class="page-list-item">Number of likes/upvotes does matter. The majority of our interviewers said that the number of likes/upvotes
+        definitely plays a large part in their social media experience. Many even agree that it often
+        creates more pressure and stress.</li>
+      <li class="page-list-item">Some of our interviewees mentioned that posting in a Reddit thread or a comment section can be
+        intimidating. </li>
+      <li class="page-list-item">Some believe that social media interactions are superficial and often a best version of ourselves.
+      </li>
+    </ul>
+
+
+
     <div class="page-quote-background">
-      <h1 class="page-large-quote"> "I would think twice about uploading my text messages to a website... "</h1>
+      <h1 class="page-large-quote"> "I love being able to connect with friends on social media. But it stresses me out to maintain this ideal
+        image of myself."</h1>
       <h3 class="page-quote-author"> Dartmouth Student '20</h3>
 
     </div>
 
-    <p class="page-normal-text"> From this point, we knew we had to focus on creating a comfortable and trusting environment for the
-      user to interact with the website. We looked at how other websites that handled sensitve information,
-      and drew inspiration from Apple, Google and even 23andMe. </p>
+    <p class="page-normal-text"> We knew we wanted to include elements of social media in the Unmasked app to promote interaction
+      and discussion. But after our interviews, it was also clear that we should steer clear of certain
+      aspects of social medal that can cause stress.</p>
 
-    <p class="page-normal-text"> By creating user personas for different user groups that we identified through our interviews, we
-      were able to empathize with our target audience and dive into the project with their needs and
-      wants in mind.
-    </p>
+    <h2 class="page-small-title"> User Personas</h2>
+
 
 
     <div class="title-wrapper">
@@ -91,83 +116,74 @@
 
     <!-- Ideate -->
 
-    <h1 class="page-small-title"> Simplify. Simplify. Simplify. </h1>
 
-    <p class="page-normal-text"> We wanted to get the data to the user as quick as possible, and therefore we chose to make user flow
-      as straightforward as possible. In terms of the user interface, we also believed a minimalistic,
-      modern design would help build our website's credibility. With the minimalist design and a straightforward
-      user flow, we aimed to create a clean user experience that flowed with each step of the experience.</p>
-
-    <p class="page-normal-text"> For example, initial mockups included a navigation bar at the top of each page. However, we eventually
-      decided to remove it because it cluttered our design and offered little benefit, giving that our
-      site navigation was already straightforward.
+    <p class="page-small-title"> Sketches and Low-Fis
     </p>
 
-    <p class="page-normal-text"> One of the main constraints that we worked within was the upload process for the 'chat.db' file on
-      Apple computers that contained all of the text conversations. Because of how the file is stored,
-      we needed to provide clear instructions to the user during the upload process. We bounced around
-      several ideas, from a slideshow tutorial process to even making a short GIF outlining the process.
-      This crucial part of the user flow was something we tested and reiterated multiple times during
-      the prototype phase. </p>
+    <p class="page-normal-text"> One of the biggest challenges during the ideate phase was coming up with a comment section design
+      that promoted equal discussion while still maintaing some level of organization. We didn't want
+      to use Reddit's hierarchy system because we felt it promoted only 'top' comments and felt jumbled
+      after the initial branches. We also wanted more organization that just a simple chronological system
+      in most forums because it can be hard to track where the discussion is going.
+    </p>
 
+    <p class="page-small-title"> The Hybrid System
+    </p>
+
+    <p class="page-normal-text"> We felt that this system we created provided the best of both world. Since each initial comment usually
+      responds to the original post in a new direction, we thought that these would be great 'converstaion
+      starters'. Responses and comments in these sub-conversations would be grouped together to keep
+      the discussion organized, while allowing new contributors to equally add to the conversation. Therefore,
+      the comment section would encourage discussion while still maintaining some level of organization.
+    </p>
 
     <div class="title-wrapper">
       <h1 class="section-title">Prototype</h1>
       <img class="section-number" src="../img/4.png" alt="4">
     </div>
 
-    <p class="page-normal-text"> A week before our project was due, we released a prototype to the rest of our class and sought feedback.
-      Suggestions included... </p>
-    <ul class="page-list">
-      <li class="page-list-item"> "Love the minimalist design, but wish it wasn't so static"</li>
-      <li class="page-list-item"> "Instructions are kind of confusing" </li>
-      <li class="page-list-item"> "Love the quantitative data, but wish there was more analysis about the emotion behind the words."</li>
-    </ul>
+    <p class="page-normal-text"> By building out low-fis, we were able to quickly discuss feature ideas and get user feedback.</p>
 
-    <p class="page-normal-text"> From the feedback, we knew which parts we had to improve before launch day. We added moments of 'delight'
-      to our project, including fade in animations and a revamped loading screen. We also iterated on
-      several different versions for our upload instructions, eventually setlling on simple text commands
-      after further user testing. </p>
-
-    <p class="page-normal-text"> One of the biggest things that we took away from our prototype stage was the fact that our users
-      wanted more than just quantitative data. Our biggest addition was a sentiment analysis system,
-      in which we looked for key words that indicated happiness, anger, stress, love, and outgoingness
-      (which we called the 'social' sentiment). </p>
-
-    <p class="page-normal-text"> Originally, we just displayed scores for each sentiment in the analytics, but we began to see a larger
-      potential for the new sentiment. For example, we created a 'Reconnect' graph that displayed contacts
-      with high love sentiment, but hadn't been in communication for a period of time.
+    <p class="page-normal-text"> For example, we quickly found that users felt that three different types of reactions to a post would
+      be excessive and one 'like' button would suffice. Additionally, we were able to get positive feedback
+      on our idea of allowing users to like each other's posts, but not sharing the number of likes to
+      anyone. As a result, the original poster would only be notified occasionally of people generally
+      liking their post or comment.
     </p>
 
-    <h3 class="page-normal-text"> My favorite bit of feedback...</h3>
-    <div class="page-quote-background">
-      <h1 class="page-large-quote"> "At first, I didn't understand the appeal. But now after analyzing my own texts, it's actually really cool!"</h1>
-      <h3 class="page-quote-author"> Dartmouth Student '19 </h3>
-    </div>
     <div class="title-wrapper">
       <h1 class="section-title">Product</h1>
       <img class="section-number" src="../img/4.png" alt="4">
     </div>
 
 
+    <p class="page-normal-text"> We designed with cool and warm colors that promoted comfort and low-stress. For our main fonts, we
+      decided to use Comfortaa because of its gentle curves in titles, and used Lato for clean and clear
+      readability in actually posts. Additionally, we wanted to use images and icons that contributed
+      to our comforting atmosphere. </p>
+
     <div class="title-wrapper">
-      <h1 class="section-title">Next Steps</h1>
+      <h1 class="section-title">Reflection</h1>
       <img class="section-number" src="../img/4.png" alt="4">
     </div>
 
-    <p class="page-normal-text"> From the outstanding positive feedback from both our peers and faculty, we kenw that we wanted to
-      expand Left On Read to our friends and family, and possibly even the world. </p>
-
-    <p class="page-normal-text"> Even from the start, we knew that Left On Read wasn't going to change the world. It first intrigued
-      us because of the proposed challenge of parsing texts and displaying analytics. But we tapped into
-      a service that catches almost everyone's curiosity, and we want to share the feeling of exploration
-      when we first got our data. </p>
-
-    <p class="page-normal-text"> Since the end of spring 2018, we have been working on a design overhaul and preparing for a mass
-      launch to the rest of the world. Check out what we're up to at leftonread.me </p>
+    <p class="page-normal-text"> After our product demo, multiple students and faculty members complemented our ability to create
+      a platform that encourages meaningful discussion. Our partners at the Student Wellness Center were
+      overwhelmingly pleased with our progress throughout the term, and they hope that that a successful
+      beta app with our designs will be implemented in the coming terms. </p>
 
 
-    <script type="text/javascript" src="../js/main.js"></script>
+    <p class="page-normal-text"> We hope that Unmasked shows the importance of the design process, especially the user research and
+      ideate phases. Without our time and effort in these stages, we would have overlooked several aspects
+      of our user experience and not considered how potential features could negatively affect the main
+      purpose of the application.</p>
+
+
+
+
+
+  </div>
+  <script type="text/javascript" src="../js/main.js"></script>
 </body>
 
 </html>
