--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
 
     <div class="other-projects">
       <div class="small-project-card" style="background-image: url(./img/reactblog-icon.png)">
+        <div class="background-overlay">
+        </div>
         <div class="small-text-wrapper">
           <div class="small-text">
             <h2 class="small-title">React Blog</h2>
@@ -226,7 +228,11 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card">
+
+
+      <div class="small-project-card" style="background-image: url(./img/crunch-logo.png)">
+        <div class="background-overlay">
+        </div>
         <div class="small-text-wrapper">
 
           <div class="small-text">
@@ -241,7 +247,9 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card">
+      <div class="small-project-card" style="background-image: url(./img/handoutpocket-logo.png)">
+        <div class="background-overlay">
+        </div>
         <div class="small-text-wrapper">
 
           <div class="small-text">
@@ -256,7 +264,10 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card">
+      <div class="small-project-card" style="background-image: url(./img/team4tech-logo.png)">
+        <div class="background-overlay">
+        </div>
+
         <div class="small-text-wrapper">
 
           <div class="small-text">
@@ -271,7 +282,9 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card">
+      <div class="small-project-card" style="background-image: url(./img/seabird-logo.png)">
+        <div class="background-overlay">
+        </div>
         <div class="small-text-wrapper">
 
           <div class="small-text">
@@ -286,7 +299,9 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card">
+      <div class="small-project-card" style="background-image: url(./img/making-logo.png)">
+        <div class="background-overlay">
+        </div>
         <div class="small-text-wrapper">
 
           <div class="small-text">
